rename item works
