# api/routes/homeshare.go
@@ -9,4 +9,5 @@ func registerHomeShareRoutes(r *mux.Router, handler *handlers.Handler) {
 	r.HandleFunc("/directory-contents", handler.DirectoryContentsHandler).Methods("POST")
 	r.HandleFunc("/create-directory", handler.CreateDirectoryHandler).Methods("POST")
 	r.HandleFunc("/delete-item", handler.DeleteItemHandler).Methods("DELETE")
+	r.HandleFunc("/rename-item", handler.RenameItemHandler).Methods("POST")
 }
